[package]
authors = ["Abdulla Abdurakhmanov <me@abdolence.dev>"]
categories = ["cryptography", "api-bindings"]
description = "KMS/AEAD envelope encryption for GCP/AWS KMS and Ring AEAD encryption"
documentation = "https://docs.rs/kms-aead"
edition = "2021"
homepage = "https://github.com/abdolence/kms-aead-rs"
include = ["Cargo.toml", "src/**/*.rs", "README.md", "LICENSE", "SECURITY.md"]
keywords = ["kms", "google", "aws", "envelope"]
license = "Apache-2.0"
name = "kms-aead"
readme = "README.md"
repository = "https://github.com/abdolence/kms-aead-rs"
version = "0.10.2-alpha.0"

[badges]
maintenance = {status = "actively-developed"}

[lib]
bench = false
name = "kms_aead"
path = "src/lib.rs"

[dependencies]
async-trait = "0.1"
aws-config = {version = "0.53.0", optional = true}
aws-sdk-kms = {version = "0.23.0", optional = true}
chrono = {version = "0.4"}
gcloud-sdk = {version = "0.19", optional = true}
hex = "0.4"
ring = {version = "0.16", features = ["default", "std"], optional = true}
rsb_derive = "0.5"
rvstruct = "0.3"
secret-vault-value = {version = "0.3"}
serde = {version = "1", features = ["derive"], optional = true}
tokio = {version = "1", features = ["full"]}
tonic = {version = "0.8", optional = true}
tracing = "0.1"

[dev-dependencies]
cargo-husky = {version = "1.5", default-features = false, features = ["run-for-all", "prepush-hook", "run-cargo-fmt"]}
criterion = {version = "0.4", features = ["async", "async_futures", "cargo_bench_support", "html_reports", "futures", "tokio", "async_tokio"]}
proptest = "1.0"
serde_json = {version = "1"}
tracing-subscriber = {version = "0.3", features = ["env-filter"]}

[features]
aws = ["dep:aws-config"]
aws-kms-encryption = ["aws", "dep:aws-sdk-kms", "ring-aead-encryption"]
default = []
gcp = ["dep:tonic", "gcloud-sdk"]
gcp-kms-encryption = ["gcp", "gcloud-sdk/google-cloud-kms-v1", "ring-aead-encryption"]
ring-aead-encryption = ["dep:ring"]
serde = ["dep:serde", "chrono/serde", "secret-vault-value/serde"]

[package.metadata.docs.rs]
all-features = true

[[example]]
name = "aws_kms"
path = "examples/aws_kms.rs"
required-features = ["aws-kms-encryption"]

[[example]]
name = "gcp_kms"
path = "examples/gcp_kms.rs"
required-features = ["gcp-kms-encryption"]

[[example]]
name = "only_aead"
path = "examples/only_aead.rs"
required-features = ["ring-aead-encryption"]
